Improve OS X ANT_OPTS so you can build locales too